--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "jrd-southport",
+  "name": "Southport",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -137,6 +137,24 @@
         "ctime": "2019-07-10T14:46:07.369Z",
         "mtime": "2019-07-10T14:46:07.369Z",
         "size": 6023
+      },
+      {
+        "file": "wp-content/themes/southportboats/single-model.php",
+        "ctime": "2019-08-29T19:49:29.293Z",
+        "mtime": "2019-08-29T19:49:29.293Z",
+        "size": 9351
+      },
+      {
+        "file": "ui/css/style.css",
+        "ctime": "2019-08-29T19:48:14.863Z",
+        "mtime": "2019-08-29T19:48:14.863Z",
+        "size": 96775
+      },
+      {
+        "file": "ui/js/jquery.init.js",
+        "ctime": "2019-08-29T19:49:00.118Z",
+        "mtime": "2019-08-29T19:49:00.118Z",
+        "size": 12594
       }
     ]
   },
