--- a/prepros.config
+++ b/prepros.config
@@ -123,6 +123,11 @@
           "file": "wp-content/themes/southportboats/template-old-model-landing.php",
           "mtimeMs": 1597172504249.2056,
           "date": "2020-08-11T19:01:44.624Z"
+        },
+        {
+          "file": "wp-content/themes/southportboats/sidebar-full-modules.php",
+          "mtimeMs": 1598281198948.4082,
+          "date": "2020-08-24T14:59:59.414Z"
         }
       ]
     },
