--- a/prepros.config
+++ b/prepros.config
@@ -128,6 +128,16 @@
           "file": "wp-content/themes/southportboats/sidebar-full-modules.php",
           "mtimeMs": 1598281198948.4082,
           "date": "2020-08-24T14:59:59.414Z"
+        },
+        {
+          "file": "wp-content/themes/southportboats/template-locations.php",
+          "mtimeMs": 1603463171004.8176,
+          "date": "2020-10-23T14:26:11.834Z"
+        },
+        {
+          "file": "wp-content/themes/southportboats/header.php",
+          "mtimeMs": 1603463292172.009,
+          "date": "2020-10-23T14:28:13.023Z"
         }
       ]
     },
